## Process this file with automake to produce Makefile.in

EXTRA_DIST = README VisualCModules.doc VisualDX.dsw dxconfig.h unix-build-sources \
	DX/DX.dsp DX/dxexec.def DXL/DXL.dsp DXL/DXL.def \
	DXcallm/DXcallm.dsp DXcallm/DXcallm.def \
	DXlite/DXlite.dsp DXlite/DXlite.def \
	dxexec/builder.ico dxexec/dx-cfg.ico dxexec/dx-cm.ico dxexec/dx-doc.ico \
	dxexec/dx-dx.ico dxexec/dxexec.dsp dxexec/dxexec.rc dxexec/editor.ico \
	dxexec/prompter.ico dxexec/resource.h dxexec/script.ico dxexec/startup.ico \
	dxexec/tutor.ico	

SUBDIRS = HelloWorld
