## Process this file with automake to produce Makefile.in

EXTRA_DIST = README VisualCModules.doc VisualDX.dsw VisualDX.sln VisualDX6.dsw \
	dxconfig.h unix-build-sources \
	DX/DX.dsp DX/dxexec.def DX/DX.vcproj \
	DXL/DXL.dsp DXL/DXL.def DXL/DXL.vcproj \
	DXcallm/DXcallm.dsp DXcallm/DXcallm.def DXcallm/DXcallm.vcproj \
	DXlite/DXlite.dsp DXlite/DXlite.def DXlite/DXlite.vcproj \
	dxconcsharp/App.ico dxconcsharp/AssemblyInfo.cs dxconcsharp/Class1.cs \
	dxconcsharp/dxconcsharp.csproj dxconcsharp/dxconcsharp.csproj.user \
	dxconsole/ReadMe.txt dxconsole/dxconsole.app dxconsole/dxconsole.vcproj \
	dxconsole/stdafx.cpp dxconsole/stdafx.h \
	dxexec/builder.ico dxexec/dx-cfg.ico dxexec/dx-cm.ico dxexec/dx-doc.ico \
	dxexec/dx-dx.ico dxexec/dxexec.dsp dxexec/dxexec.rc dxexec/editor.ico \
	dxexec/prompter.ico dxexec/resource.h dxexec/script.ico dxexec/startup.ico \
	dxexec/tutor.ico dxexec/dxexec.vcproj

SUBDIRS = HelloWorld
