## Process this file with automake to produce Makefile.in

fontdir = $(prefix)/doc

font_DATA = \
	Readme area.dx cyril_d.dx domcasual.dx dutch.dx dutchit.dx \
	fixed.dx gothiceng_t.dx gothicger_t.dx gothicit_t.dx greek_d.dx \
	greek_s.dx italic_d.dx italic_t.dx monospace.dx pitman.dx \
	roman_d.dx roman_dser.dx roman_ext.dx roman_s.dx roman_sfix.dx \
	roman_tser.dx script_d.dx script_s.dx swiss.dx swissbld.dx \
	swissbldit.dx swisscnd.dx swissit.dx symbol.dx variable.dx
