## Process this file with automake to produce Makefile.in


datadir = $(prefix)/dx/samples/callmodule

data_DATA =  Makefile_alphax Makefile_aviion Makefile_hp700 Makefile_ibm6000 Makefile_intelnt Makefile_sgi Makefile_solaris Makefile_sun4 Readme Simple.c ThunderStreamlines.c renderimage.c xapp_supervise.c callmodule_make
EXTRA_DIST = $(data_DATA)
