
imagesdir = $(prefix)/dx/html/images

images1 = \
	3dcurs.gif adctlpt.gif arch.gif autoax.gif autoexp.gif		\
	brwswin.gif camera.gif cmaped.gif cmputcfg.gif colomap1.gif	\
	colormap.gif confgdb.gif ctpanacc.gif ctpangrp.gif ctrlpan.gif	\
	dataorg.gif datapr1.gif datdpnd.gif dialint.gif dinhd.gif	\
	dxicon8.gif example1.gif excutgrp.gif exticon.gif filesel.gif	\
	findtool.gif fldobj.gif flehole.gif flesurf.gif flexmp.gif	\
	flseldb.gif flselint.gif fragment.gif framctrl.gif fulldp.gif	
images2 = \
	genwave.gif griddb.gif gridtype.gif grparts.gif hand.gif	\
	hdrdat.gif hello1.gif hello2.gif helpwin.gif htswork.gif	\
	imagwin.gif impconf.gif inputcfg.gif intlabl.gif irggrid.gif	\
	macrname.gif majcomp.gif map.gif map2plan.gif mapdform.gif	\
	matpa1.gif matpa2.gif modbuild.gif navigate.gif opendb.gif	\
	optbox.gif patrx1.gif patrx2.gif patry1.gif patry2.gif		\
	prodarxy.gif prodarz.gif prtimg.gif quikovx.gif reggrid.gif
images3 = \
	rendopts.gif reorient.gif saveas.gif savimg.gif sealevel.gif	\
	selattr.gif selctint.gif seqctrl.gif setattr.gif sgroup.gif	\
	shcomps.gif simfdp.gif skwdgrid.gif slidint.gif startup.gif	\
	stepint.gif strngint.gif strtsrv.gif strtsrvo.gif textint.gif	\
	throtdb.gif transfrm.gif txtmesh.gif usefle.gif veclist.gif	\
	vertord.gif vrtordu1.gif vrtordu2.gif vuctrl.gif wrpdgrid.gif	\
	xgroup.gif xgrpasgn.gif xirega.gif xmesha.gif xmodf1.gif
images4 = \
	xmodf10.gif xmodf11.gif xmodf12.gif xmodf13.gif xmodf2.gif	\
	xmodf3.gif xmodf4.gif xmodf6.gif xmodf7.gif xmodf8.gif		\
	xmodf9.gif xmpmacro.gif xproda.gif 

EXTRA_DIST = $(images1) $(images2) $(images3) $(images4)

if WITH_INSTALLHTML

images_DATA = $(EXTRA_DIST)

endif # WITH_INSTALLHTML

